wip: pack to nuget!

--- a/Ww.Winter.Generator/Ww.Winter.Generator.csproj
+++ b/Ww.Winter.Generator/Ww.Winter.Generator.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Ww.Winter\Ww.Winter.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+  </ItemGroup>
+
 </Project>
